--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,12 @@
 <head>
     <title>WebHook Inbox Viewer</title>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" />
-    <link href="./styles/WebHookInboxViewer.css" rel="stylesheet" />
+    <link href="/styles/WebHookInboxViewer.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-    <script src="./scripts/ui-bootstrap-tpls-0.3.0.js"></script>
-    <script src="./scripts/pollymer-1.0.0.js"></script>
-    <script src="./scripts/WebHookInboxViewer.js"></script>
+    <script src="/scripts/ui-bootstrap-tpls-0.3.0.js"></script>
+    <script src="/scripts/pollymer-1.0.0.js"></script>
+    <script src="/scripts/WebHookInboxViewer.config.js"></script>
+    <script src="/scripts/WebHookInboxViewer.js"></script>
 </head>
 <body>
 <div ng-app="WebHookInboxViewer" ng-controller="RootViewController">
