--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div>
+        <div ng-show="error">
             There has been an error creating an inbox.  Please reload the page and try again.
         </div>
         
