Support for deleting inboxes.

--- a/html/index.html
+++ b/html/index.html
@@ -60,6 +60,8 @@
 
             <div ng-show="webHookEndpoint.length > 0">
                 Current Webhook Endpoint: <a href="{{webHookEndpoint}}" target="_blank">{{webHookEndpoint}}</a>
+
+                <button class="btn btn-mini btn-danger" ng-click="delete()"><i class="icon-trash icon-white"></i> Delete</button>
             </div>
         </div>
         
